# bacon

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  bacon-actions.cpp  bacon-actions.h  bacon-cmd.cpp  bacon-cmd.h  bacon-colors.c  bacon-colors.h  bacon-ctype.c  bacon-ctype.h  bacon-defdevpix.h  bacon-device.c  bacon-device.cpp  bacon-device.h  bacon-devicelist.cpp  bacon-devicelist.h  bacon-env.c  bacon-env.cpp  bacon-env.h  bacon-file.cpp  bacon-file.h  bacon-gtk.c  bacon-gtk.h  bacon-hash.c  bacon-hash.h  bacon-htmldoc.cpp  bacon-htmldoc.h  bacon-htmlparser.cpp  bacon-htmlparser.h  bacon-inter.c  bacon-inter.h  bacon-license.h  bacon-main.cpp  (+40 more)
autom4te.cache/: output.0  traces.0  traces.1
docs/: Makefile.am  Makefile.in  bacon.1
linux/arch/: PKGBUILD
src/: Makefile.am  Makefile.in  actions.cc  actions.h  bacon-actions.cpp  bacon-actions.h  bacon-cmd.cpp  bacon-cmd.h  bacon-config.cpp  bacon-config.h  bacon-device.cpp  bacon-device.h  bacon-devicelist.cpp  bacon-devicelist.h  bacon-env.cpp  bacon-env.h  bacon-file.cpp  bacon-file.h  bacon-htmldoc.cpp  bacon-htmldoc.h  bacon-htmlparser.cpp  bacon-htmlparser.h  bacon-log.cpp  bacon-log.h  bacon-main.cpp  bacon-md5.cpp  bacon-md5.h  bacon-net.cpp  bacon-net.h  bacon-prefs.cpp  bacon-prefs.h  bacon-progress.cpp  bacon-progress.h  bacon-rom.cpp  bacon-rom.h  bacon-stats.cpp  bacon-stats.h  bacon-util.cpp  bacon-util.h  bacon.h  (+33 more)
