ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = bacon

bacon_SOURCES = \
	bacon.c \
	bacon-device.c \
	bacon-env.c \
	bacon-hash.c \
	bacon-inter.c \
	bacon-net.c \
	bacon-parse.c \
	bacon-progress.c \
	bacon-rom.c \
	bacon-util.c \
	bacon.h \
	bacon-device.h \
	bacon-env.h \
	bacon-hash.h \
	bacon-inter.h \
	bacon-net.h \
	bacon-os.h \
	bacon-parse.h \
	bacon-progress.h \
	bacon-rom.h \
	bacon-util.h

EXTRA_DIST = \
	README \
	README.md

dist_noinst_SCRIPTS = autogen.sh
