bin_PROGRAMS = bacon

bacon_SOURCES = \
	bacon.c \
	bacon-device.c \
	bacon-env.c \
	bacon-gtk.c \
	bacon-hash.c \
	bacon-inter.c \
	bacon-net.c \
	bacon-parse.c \
	bacon-progress.c \
	bacon-rom.c \
	bacon-util.c \
	bacon.h \
	bacon-device.h \
	bacon-env.h \
	bacon-gtk.h \
	bacon-hash.h \
	bacon-inter.h \
	bacon-license.h \
	bacon-net.h \
	bacon-os.h \
	bacon-parse.h \
	bacon-pixbufs.h \
	bacon-progress.h \
	bacon-rom.h \
	bacon-util.h

EXTRA_DIST = \
	COPYING \
	README \
	README.md

dist_noinst_SCRIPTS = buildconf 
