bin_PROGRAMS = bacon

INCLUDES = \
	-DSYSCONFDIR=\""$(sysconfdir)"\"

bacon_SOURCES = \
	bacon-actions.cpp \
	bacon-cmd.cpp \
	bacon-config.cpp \
	bacon-device.cpp \
	bacon-devicelist.cpp \
	bacon-env.cpp \
	bacon-file.cpp \
	bacon-htmldoc.cpp \
	bacon-htmlparser.cpp \
	bacon-log.cpp \
	bacon-main.cpp \
	bacon-md5.cpp \
	bacon-net.cpp \
	bacon-prefs.cpp \
	bacon-progress.cpp \
	bacon-rom.cpp \
	bacon-util.cpp  \
	bacon-actions.h \
	bacon-cmd.h \
	bacon-config.h \
	bacon-device.h \
	bacon-devicelist.h \
	bacon-env.h \
	bacon-file.h \
	bacon-htmldoc.h \
	bacon-htmlparser.h \
	bacon-log.h \
	bacon-md5.h \
	bacon-net.h \
	bacon-prefs.h \
	bacon-progress.h \
	bacon-rom.h \
	bacon-util.h
