bin_PROGRAMS = bacon

bacon_CXXFLAGS = \
	-DSYSCONFDIR=\""$(sysconfdir)"\" \
	-DBACON_ROM_HISTORY_DEFAULT=@BACON_ROM_HISTORY_DEFAULT@ \
	-DBACON_ROM_HISTORY_MAX=@BACON_ROM_HISTORY_MAX@

bacon_SOURCES = \
	actions.cc \
	cmd.cc \
	conf.cc \
	device.cc \
	devicelist.cc \
	env.cc \
	file.cc \
	htmldoc.cc \
	htmlparser.cc \
	log.cc \
	main.cc \
	md5.cc \
	net.cc \
	prefs.cc \
	progress.cc \
	rom.cc \
	stats.cc \
	util.cc \
	actions.h \
	cmd.h \
	conf.h \
	device.h \
	devicelist.h \
	env.h \
	file.h \
	htmldoc.h \
	htmlparser.h \
	log.h \
	md5.h \
	net.h \
	prefs.h \
	progress.h \
	rom.h \
	stats.h \
	util.h
